--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="/node_modules/react-grid-layout/css/styles.css" />
+  <link rel="stylesheet" href="/node_modules/react-resizable/css/styles.css" />
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
