--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script type="module" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js"></script>
   <!--<script type="module" src="../dist/leaflet-realtime.js"></script>-->
 
-  <title>H2politO Telemetryyy</title>
+  <title>H2politO Telemetryy</title>
 </head>
 
 <body>
