--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/node_modules/react-grid-layout/css/styles.css" />
   <link rel="stylesheet" href="/node_modules/react-resizable/css/styles.css" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/logoTeam.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/components/NavBar/logoTeam.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -31,7 +31,7 @@
   <script type="module" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js"></script>
   <!--<script type="module" src="../dist/leaflet-realtime.js"></script>-->
 
-  <title>H2politO Telemetryy</title>
+  <title>H2politO Telemetry</title>
 </head>
 
 <body>
