added post-run page to view uploaded data; only the graphs work for now

--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="/node_modules/react-grid-layout/css/styles.css" />
   <link rel="stylesheet" href="/node_modules/react-resizable/css/styles.css" />
+
+  <link rel="stylesheet" href="dist/uPlot.min.css">
+  <script src="dist/uPlot.iife.min.js"></script>
+
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/components/NavBar/logoTeam.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,17 +21,18 @@
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
 
+
+
+
   <!-- Leafletsjs-->
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
-    integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
-    crossorigin=""/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+    integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
 
- <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
-     integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
-     crossorigin=""></script>
-    
+  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+    integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+
   <script type="module" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js"></script>
   <!--<script type="module" src="../dist/leaflet-realtime.js"></script>-->
 
