--- a/root/frontend/index.html
+++ b/root/frontend/index.html
@@ -22,8 +22,6 @@
     crossorigin="anonymous"></script>
 
 
-
-
   <!-- Leafletsjs-->
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -33,8 +31,13 @@
   <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
     integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
 
+  <script src="node_modules/leaflet-toolbar/dist/leaflet.toolbar.js"></script>
+  <link rel="stylesheet" href="node_modules/leaflet-toolbar/dist/leaflet.toolbar.css" />
+
   <script type="module" src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js"></script>
   <!--<script type="module" src="../dist/leaflet-realtime.js"></script>-->
+
+  <script src="https://unpkg.com/uplot/dist/uPlot.iife.min.js"></script>
 
   <title>H2politO Telemetry</title>
 </head>
